--- a/zckhome.css
+++ b/zckhome.css
@@ -1,6 +1,7 @@
 body{
     margin: 0px;
     padding: 0px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -104,3 +105,61 @@ padding: 5px;
 
 }
 }
+
+/*---------------------WELCOME SECTION ZCK--------------*/
+
+.zck-welcome{
+    height: 500px;
+   
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    justify-content:space-between;
+    /*background-color: rgba(250, 235, 215, 0.486);*/
+   background-color: #ffffcc6e; 
+
+}
+
+.logo-pic{
+    height: 400px;
+    width: 400px;
+    border-radius: 220px;
+    cursor: pointer;
+    margin-left:100px;
+}
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+.zck-welcome h1{
+    font-family: "Roboto", sans-serif;
+    font-weight: bolder;
+    font-size: 50px;
+    margin-right: 100px;
+    color: #064E3B;
+}
+
+
+@media (max-width: 1000px) {
+    .zck-welcome {
+        flex-direction: column;
+        height: auto;
+        padding: 20px;
+        justify-content: center;
+    }
+
+    .logo-pic {
+        height: 250px;
+        width: 250px;
+        margin-left: 0;
+        margin-bottom: 20px;
+    }
+
+    .zck-welcome h1 {
+        font-size: 30px;
+        margin-right: 0;
+        text-align: center;
+    }
+}
+
+
