--- a/zckhome.css
+++ b/zckhome.css
@@ -12,6 +12,9 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    position: sticky;
+    top: 0px;
+    
 }
 
 nav a {
